# OpsPilot

./: pyproject.toml  requirements.txt
opspilot/: cli.py  config.py  state.py
opspilot/agents/: planner.py
