[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opspilot"
version = "0.1.0"
description = "Agentic AI CLI for project-level incident analysis"
authors = [{ name = "Kiran Choudhari" }]
requires-python = ">=3.10"

dependencies = [
  "typer",
  "rich",
  "pydantic"
]

[project.scripts]
opspilot = "opspilot.cli:app"

[tool.setuptools]
packages = ["opspilot"]
